--- a/frontend/src/components/Navigation/Navbar.css
+++ b/frontend/src/components/Navigation/Navbar.css
@@ -84,7 +84,7 @@
 
 @media screen and (max-width: 819px){
     #nav .navbar--hidden {
-        display: none;
+        opacity: 0!important;
     }
 
     #nav .navbar--collapse {
@@ -107,7 +107,9 @@
         position: absolute;
         top: 60px;
         background: #fff;
+        opacity: 1;
         box-shadow: 0px 3px 3px rgba(0,0,0,0.12), -1px 4px 2px rgba(0,0,0,0.24);
+        transition: opacity 0.5s ease-out;
     }
 
     #nav .navbar--container .nav--item, #nav .navbar--container .nav--right {
