--- a/frontend/src/components/Modal/Header/Header.css
+++ b/frontend/src/components/Modal/Header/Header.css
@@ -19,3 +19,19 @@
     color: #000;
     cursor: pointer;
 }
+
+@media screen and (max-width: 819px) {
+    .modal-header {
+        box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+    }
+
+    .modal-header .modal-exit {
+        border: 0;
+        position: static;
+        margin: 25px 20px;
+        font-size: 24px;
+        -webkit-transition: 0.4s color;
+        transition: 0.4s color;
+        color: #c0c0c0;
+    }
+}
