--- a/frontend/src/components/Modal/Modal.css
+++ b/frontend/src/components/Modal/Modal.css
@@ -78,3 +78,17 @@
     left: 0;
     z-index: 100;
 }
+
+@media screen and (max-width: 819px) {
+    .modal-container {
+        width: 100%;
+        height: 100vh;
+        position: absolute;
+        top: 0;
+    }
+
+    .modal {
+        width: 100%;
+        height: 100vh;
+    }
+}
