--- a/frontend/src/components/Modal/Modal.css
+++ b/frontend/src/components/Modal/Modal.css
@@ -4,6 +4,9 @@
     justify-content: center;
     align-items: center;
     width: 100%;
+    height: 100vh;
+    position: absolute;
+    top: 0;
 }
 
 .modal {
